# SO2projekt2

./: CMakeLists.txt  main.cpp
logic/src/: ATControlTower.cpp  ATControlTower.h  Airport.cpp  Airport.h  FlightControlTower.cpp  FlightControlTower.h  GroundServices.cpp  GroundServices.h  Passenger.cpp  Passenger.h  Plane.cpp  Plane.h  Terminal.cpp  Terminal.h  Vehicle.cpp  Vehicle.h
logic/src/resources/: Gate.cpp  Gate.h  Hangar.cpp  Hangar.h  RefuellingTruck.cpp  RefuellingTruck.h  Runway.cpp  Runway.h  TechnicalSupport.cpp  TechnicalSupport.h  Terminal.h  Vehicle.cpp  Vehicle.h
logic/src/utilities/: Config.cpp  Config.h  FileUtils.h  Timer.h  randomise.h
presenter/: AirportController.cpp  AirportController.h
view/: AirportView.cpp  AirportView.h
